--- a/src/styles/pages/tools/[tool]/ToolArticleLayout.css
+++ b/src/styles/pages/tools/[tool]/ToolArticleLayout.css
@@ -913,6 +913,7 @@
     width: 100%;
     max-width: 42rem;
     height: auto;
+    max-height: none;
   }
 
   .tqa-article :is(video) {
